# web-search-engine

./: .gitignore  Cargo.toml  add_todo.sh  backup.sh  create_db.sql  run_server.sh  scrape.sh  setup_server.sh  stats.sh  troughput.sh
searcher/: Cargo.toml
searcher/src/: main.rs
searcher/static/: index.html
src/: main.rs
