[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
charabia = "0.9.2"
clickhouse = { version = "0.13.1", features = ["lz4", "inserter", "time"] }
concurrent-queue = "2.5.0"
ctrlc = "3.4.5"
itertools = "0.13.0"
kuchiki = "0.8.1"
num_cpus = "1.16.0"
once_cell = "1.20.2"
playwright = "0.0.20"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
texting_robots = "0.2.2"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
