[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
clickhouse = { version = "0.13.1", features = ["lz4", "inserter", "time"] }
charabia = "0.9.2"
regex = "1.11.1"
rocket = "0.5.1"
serde_json = "1.0.133"
